clang-tidy: Fix unnecessary object copies in WebCore/platform/graphics/avfoundation/objc/ <https://webkit.org/b/192708> <rdar://problem/46735907>

Reviewed by Jer Noble.

* platform/graphics/avfoundation/objc/ImageDecoderAVFObjC.mm:
(WebCore::toSample):
- Make argument a const reference.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.h:
- Update method signatures for implementation changes.
* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::setAsset):
(WebCore::MediaPlayerPrivateAVFoundationObjC::seekableTimeRangesDidChange):
(WebCore::MediaPlayerPrivateAVFoundationObjC::loadedTimeRangesDidChange):
- Make RetainPtr<> argument an rvalue reference and use WTFMove().
(WebCore::MediaPlayerPrivateAVFoundationObjC::metadataDidArrive):
(WebCore::MediaPlayerPrivateAVFoundationObjC::tracksDidChange):
- Make RetainPtr<> argument a const reference.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::setVolume):
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::setMuted):
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::setPreservesPitch):
- Change for loop keys to be const references.

* platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.h:
- Update method signatures for implementation changes.
* platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
(WebCore::SourceBufferPrivateAVFObjC::fastSeekTimeForMediaTime):
(WebCore::SourceBufferPrivateAVFObjC::seekToTime):
- Make Mediatime arguments a const reference.


Canonical link: https://commits.webkit.org/207296@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239230 268f45cc-cd09-0410-ab3c-d52691b4dbfc